--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,14 +1,14 @@
 <div class="container mt-3">
   <div class="row justify-content-center">
     <div class="col col-sm-10 col-md-8 text-center">
-      <h1>Credit Card Theft Detector</h1>
-      <p>Ever been hacked? Try it out now.</p>
+      <h1 class="text-primary">Credit Card Theft Detector</h1>
+      <p>Enter your details to check for any hacks</p>
     </div>
   </div>
 </div>
 <div class="container card-margin">
   <div class="row">
-    <div class="col col-sm-6">
+    <div class="col col-sm-6 d-flex align-items-center">
       <div class="cc-container preload">
         <div class="creditcard">
           <div class="front">
@@ -129,6 +129,9 @@
           <label for="securitycode">Security Code</label>
           <input id="securitycode" type="text" pattern="[0-9]*" inputmode="numeric">
         </div>
+      </div>
+      <div class="w-100" style='padding: 0 20px 20px 20px'>
+        <button class="btn btn-primary w-100 p-3">CHECK INFO</button>
       </div>
     </div>
   </div>
