--- a/source/assets/stylesheets/components/_credit_card.scss
+++ b/source/assets/stylesheets/components/_credit_card.scss
@@ -55,7 +55,6 @@
   grid-template-columns: auto auto;
   grid-template-rows: 90px 90px 90px;
   grid-template-areas: "name name""number number""expiration security";
-  max-width: 400px;
   padding: 20px;
   color: #707070;
 }
@@ -362,6 +361,13 @@ input {
   }
   .form-container {
     margin-top: 1rem !important;
+  }
+  h1 {
+    font-size: 1.5rem;
+    font-weight: bolder;
+  }
+  p {
+    font-size: 14px;
   }
 }
 
