--- a/source/assets/stylesheets/config/_bootstrap_variables.scss
+++ b/source/assets/stylesheets/config/_bootstrap_variables.scss
@@ -11,10 +11,10 @@ $font-size-base: 1rem;
 
 // Colors
 $body-color: $gray;
-$primary:    $blue;
+$primary:    $red;
 $success:    $green;
 $info:       $yellow;
-$danger:     $red;
+$danger:     $blue;
 $warning:    $orange;
 
 // Buttons & inputs' radius
