--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,7 +1,7 @@
 <div class="container mt-3">
   <div class="row justify-content-center">
     <div class="col col-sm-10 col-md-8 text-center">
-      <h1 class="text-primary">Credit Card Theft Detector</h1>
+      <h1 class="text-primary">Credit<%= "\&nbsp;" %>Card Theft<%= "\&nbsp;" %>Detector</h1>
       <p>Enter your details to check for any hacks</p>
     </div>
   </div>
@@ -131,7 +131,7 @@
         </div>
       </div>
       <div class="w-100" style='padding: 0 20px 20px 20px'>
-        <button class="btn btn-primary w-100 p-3">CHECK INFO</button>
+        <button class="btn btn-primary w-100 p-3"><strong>CHECK INFO</strong></button>
       </div>
     </div>
   </div>
