--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -130,8 +130,8 @@
           <input id="securitycode" type="text" pattern="[0-9]*" inputmode="numeric">
         </div>
       </div>
-      <div class="w-100" style='padding: 0 20px 20px 20px'>
-        <button class="btn btn-primary w-100 p-3"><strong>CHECK INFO</strong></button>
+      <div class="w-100 postion-relative" style='padding: 0 20px 20px 20px' id='button'>
+        <button class="btn btn-primary w-100 p-3" data-toggle="popover" title="🚨 Never do this." data-content="Don't enter sensitive information into sources you don't trust." data-placement="top"><strong>CHECK INFO</strong></button>
       </div>
     </div>
   </div>
