added meta information

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -2,7 +2,7 @@
   <div class="row justify-content-center">
     <div class="col col-sm-10 col-md-8 text-center">
       <h1 class="text-primary">Credit<%= "\&nbsp;" %>Card Theft<%= "\&nbsp;" %>Detector</h1>
-      <p>Enter your details to check for any hacks</p>
+      <p>Enter your details to see if you've been hacked</p>
     </div>
   </div>
 </div>
