--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -8,9 +8,10 @@
     <!-- For Bootstrap responsiveness -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Portfolio</title>
+    <title>Credit Card Theft Detector</title>
     <!-- This needs to be configured. See the docs: https://github.com/cacheventures/middleman-metaman -->
     <%= display_meta_tags %>
+    <meta name="description" content="Enter your information to see if you've been hacked">
     <%= favicon_tag 'favicon.ico' %>
     <%= stylesheet_link_tag "app" %>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-2/css/all.min.css">
