--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -17,7 +17,14 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-2/css/all.min.css">
   </head>
   <body>
-    <%= yield %>
+    <div class="content">
+      <%= yield %>
+    </div>
+    <div class="footer">
+      <div class="footer-links">
+        <a href="https://github.com/dmbf29" target="_blank"><i class="fab fa-github"></i></a>
+      </div>
+    </div>
     <%= javascript_include_tag "bundle" %>
   </body>
 </html>
