--- a/source/assets/stylesheets/components/_footer.scss
+++ b/source/assets/stylesheets/components/_footer.scss
@@ -11,12 +11,13 @@
 }
 
 .footer-links {
-  display: flex;
-  align-items: center;
+  position: absolute;
+  bottom: 16px;
+  left: 8px;
 }
 
 .footer-links a {
-  color: rgba(214, 212, 212, 0.8);
+  color: rgba(193, 191, 191, 0.8);
   opacity: 0.8;
   text-decoration: none;
   font-size: 24px;
