--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -10,6 +10,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Credit Card Theft Detector</title>
     <!-- This needs to be configured. See the docs: https://github.com/cacheventures/middleman-metaman -->
+    <meta property="og:title" content="Credit Card Theft Detector" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://theft-protection.netlify.app" />
+    <meta property="og:image" content="<%= 'https://theft-protection.netlify.app' + image_path('og_image.png') %>" />
+    <meta property="og:description" content="Enter your information to see if you've been hacked" />
+    <meta property="og:site_name" content="Credit Card Theft Detector" />
     <%= display_meta_tags %>
     <meta name="description" content="Enter your information to see if you've been hacked">
     <%= favicon_tag 'favicon.ico' %>
