fixed typo in og image

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -13,7 +13,7 @@
     <meta property="og:title" content="Credit Card Theft Detector" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://theft-protection.netlify.app" />
-    <meta property="og:image" content="<%= 'https://theft-protection.netlify.app' + image_path('og_image2.png') %>" />
+    <meta property="og:image" content="<%= 'https://theft-protection.netlify.app/' + image_path('og_image2.png') %>" />
     <meta property="og:description" content="Enter your information to see if you've been hacked" />
     <meta property="og:site_name" content="Credit Card Theft Detector" />
     <%= display_meta_tags %>
